parser.output
Terminals which are not used

   T_CLASSTYPE


Grammar

    0 $accept: Start $end

    1 Start: CLASS1

    2 CLASS1: CLASS1 CLASS
    3       | CLASS

    4 CLASS: DECLARATION
    5      | T_IDENTIFIER T_EXTENDS DECLARATION

    6 DECLARATION: T_IDENTIFIER T_OPENBRACKET IMPLEMENTATION T_CLOSEDBRACKET

    7 IMPLEMENTATION: TYPE T_IDENTIFIER T_SEMI IMPLEMENTATION
    8               | METHOD2

    9 TYPE: T_INTEGER
   10     | T_BOOLEAN
   11     | T_IDENTIFIER

   12 METHOD2: METHOD1
   13        | /* empty */

   14 METHOD1: METHOD1 METHOD
   15        | METHOD

   16 METHOD: T_IDENTIFIER T_OPENPAREN PARAMETERS1 T_CLOSEDPAREN T_METHODRETURN RETURN_TYPE T_OPENBRACKET BODY RETURN_STATEMENT T_CLOSEDBRACKET

   17 PARAMETERS1: PARAMETERS
   18            | /* empty */

   19 PARAMETERS: PARAMETERS T_COMMA PARAMETER
   20           | PARAMETER

   21 PARAMETER: T_IDENTIFIER T_COLON TYPE

   22 RETURN_TYPE: TYPE
   23            | T_NONE

   24 BODY: TYPE VARIABLE_ T_SEMI BODY
   25     | STATEMENTS1

   26 VARIABLE_: VARIABLE_ T_COMMA T_IDENTIFIER
   27          | T_IDENTIFIER

   28 RETURN_STATEMENT: T_RETURN EXPRESSION T_SEMI
   29                 | /* empty */

   30 STATEMENTS1: STATEMENTS
   31            | /* empty */

   32 STATEMENTS: STATEMENT STATEMENTS
   33           | STATEMENT

   34 STATEMENT: ASSIGNMENT
   35          | METHODCALL T_SEMI
   36          | IFELSE
   37          | WHILELOOP
   38          | REPEATUNTIL
   39          | PRINT1

   40 ASSIGNMENT: T_IDENTIFIER T_EQUALS EXPRESSION T_SEMI
   41           | T_IDENTIFIER T_DOT T_IDENTIFIER T_EQUALS EXPRESSION T_SEMI

   42 IFELSE: T_IF EXPRESSION T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET
   43       | T_IF EXPRESSION T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET T_ELSE T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET

   44 WHILELOOP: T_WHILE EXPRESSION T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET

   45 REPEATUNTIL: T_REPEAT T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET T_UNTIL T_OPENPAREN EXPRESSION T_CLOSEDPAREN T_SEMI

   46 PRINT1: T_PRINT EXPRESSION T_SEMI

   47 EXPRESSION: EXPRESSION T_PLUS EXPRESSION
   48           | EXPRESSION T_MINUS EXPRESSION
   49           | EXPRESSION T_MULTIPLY EXPRESSION
   50           | EXPRESSION T_DIVIDE EXPRESSION
   51           | EXPRESSION T_LESSTHAN EXPRESSION
   52           | EXPRESSION T_LESSTHANOREQUAL EXPRESSION
   53           | EXPRESSION T_EQUALSBOOL EXPRESSION
   54           | EXPRESSION T_AND EXPRESSION
   55           | EXPRESSION T_OR EXPRESSION
   56           | T_NOT EXPRESSION
   57           | T_MINUS EXPRESSION
   58           | T_IDENTIFIER
   59           | T_IDENTIFIER T_DOT T_IDENTIFIER
   60           | METHODCALL
   61           | T_OPENPAREN EXPRESSION T_CLOSEDPAREN
   62           | T_INTEGERLITERAL
   63           | T_TRUE
   64           | T_FALSE
   65           | T_NEW T_IDENTIFIER
   66           | T_NEW T_IDENTIFIER T_OPENPAREN ARGUMENTS T_CLOSEDPAREN

   67 METHODCALL: T_IDENTIFIER T_OPENPAREN ARGUMENTS T_CLOSEDPAREN
   68           | T_IDENTIFIER T_DOT T_IDENTIFIER T_OPENPAREN ARGUMENTS T_CLOSEDPAREN

   69 ARGUMENTS: ARGUMENTS_
   70          | /* empty */

   71 ARGUMENTS_: ARGUMENTS_ T_COMMA EXPRESSION
   72           | EXPRESSION


Terminals, with rules where they appear

$end (0) 0
error (256)
T_OR (258) 55
T_AND (259) 54
T_LESSTHAN (260) 51
T_LESSTHANOREQUAL (261) 52
T_EQUALS (262) 40 41
T_PLUS (263) 47
T_MINUS (264) 48 57
T_MULTIPLY (265) 49
T_DIVIDE (266) 50
T_NOT (267) 56
T_IDENTIFIER (268) 5 6 7 11 16 21 26 27 40 41 58 59 65 66 67 68
T_INTEGERLITERAL (269) 62
T_PRINT (270) 46
T_RETURN (271) 28
T_IF (272) 42 43
T_ELSE (273) 43
T_WHILE (274) 44
T_NEW (275) 65 66
T_INTEGER (276) 9
T_BOOLEAN (277) 10
T_NONE (278) 23
T_TRUE (279) 63
T_FALSE (280) 64
T_EXTENDS (281) 5
T_REPEAT (282) 45
T_UNTIL (283) 45
T_OPENBRACKET (284) 6 16 42 43 44 45
T_CLOSEDBRACKET (285) 6 16 42 43 44 45
T_OPENPAREN (286) 16 45 61 66 67 68
T_CLOSEDPAREN (287) 16 45 61 66 67 68
T_SEMI (288) 7 24 28 35 40 41 45 46
T_COLON (289) 21
T_METHODRETURN (290) 16
T_COMMA (291) 19 26 71
T_DOT (292) 41 59 68
T_EQUALSBOOL (293) 53
T_CLASSTYPE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Start (41)
    on left: 1, on right: 0
CLASS1 (42)
    on left: 2 3, on right: 1 2
CLASS (43)
    on left: 4 5, on right: 2 3
DECLARATION (44)
    on left: 6, on right: 4 5
IMPLEMENTATION (45)
    on left: 7 8, on right: 6 7
TYPE (46)
    on left: 9 10 11, on right: 7 21 22 24
METHOD2 (47)
    on left: 12 13, on right: 8
METHOD1 (48)
    on left: 14 15, on right: 12 14
METHOD (49)
    on left: 16, on right: 14 15
PARAMETERS1 (50)
    on left: 17 18, on right: 16
PARAMETERS (51)
    on left: 19 20, on right: 17 19
PARAMETER (52)
    on left: 21, on right: 19 20
RETURN_TYPE (53)
    on left: 22 23, on right: 16
BODY (54)
    on left: 24 25, on right: 16 24
VARIABLE_ (55)
    on left: 26 27, on right: 24 26
RETURN_STATEMENT (56)
    on left: 28 29, on right: 16
STATEMENTS1 (57)
    on left: 30 31, on right: 25
STATEMENTS (58)
    on left: 32 33, on right: 30 32 42 43 44 45
STATEMENT (59)
    on left: 34 35 36 37 38 39, on right: 32 33
ASSIGNMENT (60)
    on left: 40 41, on right: 34
IFELSE (61)
    on left: 42 43, on right: 36
WHILELOOP (62)
    on left: 44, on right: 37
REPEATUNTIL (63)
    on left: 45, on right: 38
PRINT1 (64)
    on left: 46, on right: 39
EXPRESSION (65)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66, on right: 28 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 61 71 72
METHODCALL (66)
    on left: 67 68, on right: 35 60
ARGUMENTS (67)
    on left: 69 70, on right: 66 67 68
ARGUMENTS_ (68)
    on left: 71 72, on right: 69 71


state 0

    0 $accept: . Start $end

    T_IDENTIFIER  shift, and go to state 1

    Start        go to state 2
    CLASS1       go to state 3
    CLASS        go to state 4
    DECLARATION  go to state 5


state 1

    5 CLASS: T_IDENTIFIER . T_EXTENDS DECLARATION
    6 DECLARATION: T_IDENTIFIER . T_OPENBRACKET IMPLEMENTATION T_CLOSEDBRACKET

    T_EXTENDS      shift, and go to state 6
    T_OPENBRACKET  shift, and go to state 7


state 2

    0 $accept: Start . $end

    $end  shift, and go to state 8


state 3

    1 Start: CLASS1 .
    2 CLASS1: CLASS1 . CLASS

    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    CLASS        go to state 9
    DECLARATION  go to state 5


state 4

    3 CLASS1: CLASS .

    $default  reduce using rule 3 (CLASS1)


state 5

    4 CLASS: DECLARATION .

    $default  reduce using rule 4 (CLASS)


state 6

    5 CLASS: T_IDENTIFIER T_EXTENDS . DECLARATION

    T_IDENTIFIER  shift, and go to state 10

    DECLARATION  go to state 11


state 7

    6 DECLARATION: T_IDENTIFIER T_OPENBRACKET . IMPLEMENTATION T_CLOSEDBRACKET

    T_IDENTIFIER  shift, and go to state 12
    T_INTEGER     shift, and go to state 13
    T_BOOLEAN     shift, and go to state 14

    $default  reduce using rule 13 (METHOD2)

    IMPLEMENTATION  go to state 15
    TYPE            go to state 16
    METHOD2         go to state 17
    METHOD1         go to state 18
    METHOD          go to state 19


state 8

    0 $accept: Start $end .

    $default  accept


state 9

    2 CLASS1: CLASS1 CLASS .

    $default  reduce using rule 2 (CLASS1)


state 10

    6 DECLARATION: T_IDENTIFIER . T_OPENBRACKET IMPLEMENTATION T_CLOSEDBRACKET

    T_OPENBRACKET  shift, and go to state 7


state 11

    5 CLASS: T_IDENTIFIER T_EXTENDS DECLARATION .

    $default  reduce using rule 5 (CLASS)


state 12

   11 TYPE: T_IDENTIFIER .
   16 METHOD: T_IDENTIFIER . T_OPENPAREN PARAMETERS1 T_CLOSEDPAREN T_METHODRETURN RETURN_TYPE T_OPENBRACKET BODY RETURN_STATEMENT T_CLOSEDBRACKET

    T_OPENPAREN  shift, and go to state 20

    $default  reduce using rule 11 (TYPE)


state 13

    9 TYPE: T_INTEGER .

    $default  reduce using rule 9 (TYPE)


state 14

   10 TYPE: T_BOOLEAN .

    $default  reduce using rule 10 (TYPE)


state 15

    6 DECLARATION: T_IDENTIFIER T_OPENBRACKET IMPLEMENTATION . T_CLOSEDBRACKET

    T_CLOSEDBRACKET  shift, and go to state 21


state 16

    7 IMPLEMENTATION: TYPE . T_IDENTIFIER T_SEMI IMPLEMENTATION

    T_IDENTIFIER  shift, and go to state 22


state 17

    8 IMPLEMENTATION: METHOD2 .

    $default  reduce using rule 8 (IMPLEMENTATION)


state 18

   12 METHOD2: METHOD1 .
   14 METHOD1: METHOD1 . METHOD

    T_IDENTIFIER  shift, and go to state 23

    $default  reduce using rule 12 (METHOD2)

    METHOD  go to state 24


state 19

   15 METHOD1: METHOD .

    $default  reduce using rule 15 (METHOD1)


state 20

   16 METHOD: T_IDENTIFIER T_OPENPAREN . PARAMETERS1 T_CLOSEDPAREN T_METHODRETURN RETURN_TYPE T_OPENBRACKET BODY RETURN_STATEMENT T_CLOSEDBRACKET

    T_IDENTIFIER  shift, and go to state 25

    $default  reduce using rule 18 (PARAMETERS1)

    PARAMETERS1  go to state 26
    PARAMETERS   go to state 27
    PARAMETER    go to state 28


state 21

    6 DECLARATION: T_IDENTIFIER T_OPENBRACKET IMPLEMENTATION T_CLOSEDBRACKET .

    $default  reduce using rule 6 (DECLARATION)


state 22

    7 IMPLEMENTATION: TYPE T_IDENTIFIER . T_SEMI IMPLEMENTATION

    T_SEMI  shift, and go to state 29


state 23

   16 METHOD: T_IDENTIFIER . T_OPENPAREN PARAMETERS1 T_CLOSEDPAREN T_METHODRETURN RETURN_TYPE T_OPENBRACKET BODY RETURN_STATEMENT T_CLOSEDBRACKET

    T_OPENPAREN  shift, and go to state 20


state 24

   14 METHOD1: METHOD1 METHOD .

    $default  reduce using rule 14 (METHOD1)


state 25

   21 PARAMETER: T_IDENTIFIER . T_COLON TYPE

    T_COLON  shift, and go to state 30


state 26

   16 METHOD: T_IDENTIFIER T_OPENPAREN PARAMETERS1 . T_CLOSEDPAREN T_METHODRETURN RETURN_TYPE T_OPENBRACKET BODY RETURN_STATEMENT T_CLOSEDBRACKET

    T_CLOSEDPAREN  shift, and go to state 31


state 27

   17 PARAMETERS1: PARAMETERS .
   19 PARAMETERS: PARAMETERS . T_COMMA PARAMETER

    T_COMMA  shift, and go to state 32

    $default  reduce using rule 17 (PARAMETERS1)


state 28

   20 PARAMETERS: PARAMETER .

    $default  reduce using rule 20 (PARAMETERS)


state 29

    7 IMPLEMENTATION: TYPE T_IDENTIFIER T_SEMI . IMPLEMENTATION

    T_IDENTIFIER  shift, and go to state 12
    T_INTEGER     shift, and go to state 13
    T_BOOLEAN     shift, and go to state 14

    $default  reduce using rule 13 (METHOD2)

    IMPLEMENTATION  go to state 33
    TYPE            go to state 16
    METHOD2         go to state 17
    METHOD1         go to state 18
    METHOD          go to state 19


state 30

   21 PARAMETER: T_IDENTIFIER T_COLON . TYPE

    T_IDENTIFIER  shift, and go to state 34
    T_INTEGER     shift, and go to state 13
    T_BOOLEAN     shift, and go to state 14

    TYPE  go to state 35


state 31

   16 METHOD: T_IDENTIFIER T_OPENPAREN PARAMETERS1 T_CLOSEDPAREN . T_METHODRETURN RETURN_TYPE T_OPENBRACKET BODY RETURN_STATEMENT T_CLOSEDBRACKET

    T_METHODRETURN  shift, and go to state 36


state 32

   19 PARAMETERS: PARAMETERS T_COMMA . PARAMETER

    T_IDENTIFIER  shift, and go to state 25

    PARAMETER  go to state 37


state 33

    7 IMPLEMENTATION: TYPE T_IDENTIFIER T_SEMI IMPLEMENTATION .

    $default  reduce using rule 7 (IMPLEMENTATION)


state 34

   11 TYPE: T_IDENTIFIER .

    $default  reduce using rule 11 (TYPE)


state 35

   21 PARAMETER: T_IDENTIFIER T_COLON TYPE .

    $default  reduce using rule 21 (PARAMETER)


state 36

   16 METHOD: T_IDENTIFIER T_OPENPAREN PARAMETERS1 T_CLOSEDPAREN T_METHODRETURN . RETURN_TYPE T_OPENBRACKET BODY RETURN_STATEMENT T_CLOSEDBRACKET

    T_IDENTIFIER  shift, and go to state 34
    T_INTEGER     shift, and go to state 13
    T_BOOLEAN     shift, and go to state 14
    T_NONE        shift, and go to state 38

    TYPE         go to state 39
    RETURN_TYPE  go to state 40


state 37

   19 PARAMETERS: PARAMETERS T_COMMA PARAMETER .

    $default  reduce using rule 19 (PARAMETERS)


state 38

   23 RETURN_TYPE: T_NONE .

    $default  reduce using rule 23 (RETURN_TYPE)


state 39

   22 RETURN_TYPE: TYPE .

    $default  reduce using rule 22 (RETURN_TYPE)


state 40

   16 METHOD: T_IDENTIFIER T_OPENPAREN PARAMETERS1 T_CLOSEDPAREN T_METHODRETURN RETURN_TYPE . T_OPENBRACKET BODY RETURN_STATEMENT T_CLOSEDBRACKET

    T_OPENBRACKET  shift, and go to state 41


state 41

   16 METHOD: T_IDENTIFIER T_OPENPAREN PARAMETERS1 T_CLOSEDPAREN T_METHODRETURN RETURN_TYPE T_OPENBRACKET . BODY RETURN_STATEMENT T_CLOSEDBRACKET

    T_IDENTIFIER  shift, and go to state 42
    T_PRINT       shift, and go to state 43
    T_IF          shift, and go to state 44
    T_WHILE       shift, and go to state 45
    T_INTEGER     shift, and go to state 13
    T_BOOLEAN     shift, and go to state 14
    T_REPEAT      shift, and go to state 46

    $default  reduce using rule 31 (STATEMENTS1)

    TYPE         go to state 47
    BODY         go to state 48
    STATEMENTS1  go to state 49
    STATEMENTS   go to state 50
    STATEMENT    go to state 51
    ASSIGNMENT   go to state 52
    IFELSE       go to state 53
    WHILELOOP    go to state 54
    REPEATUNTIL  go to state 55
    PRINT1       go to state 56
    METHODCALL   go to state 57


state 42

   11 TYPE: T_IDENTIFIER .
   40 ASSIGNMENT: T_IDENTIFIER . T_EQUALS EXPRESSION T_SEMI
   41           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_EQUALS EXPRESSION T_SEMI
   67 METHODCALL: T_IDENTIFIER . T_OPENPAREN ARGUMENTS T_CLOSEDPAREN
   68           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN ARGUMENTS T_CLOSEDPAREN

    T_EQUALS     shift, and go to state 58
    T_OPENPAREN  shift, and go to state 59
    T_DOT        shift, and go to state 60

    $default  reduce using rule 11 (TYPE)


state 43

   46 PRINT1: T_PRINT . EXPRESSION T_SEMI

    T_MINUS           shift, and go to state 61
    T_NOT             shift, and go to state 62
    T_IDENTIFIER      shift, and go to state 63
    T_INTEGERLITERAL  shift, and go to state 64
    T_NEW             shift, and go to state 65
    T_TRUE            shift, and go to state 66
    T_FALSE           shift, and go to state 67
    T_OPENPAREN       shift, and go to state 68

    EXPRESSION  go to state 69
    METHODCALL  go to state 70


state 44

   42 IFELSE: T_IF . EXPRESSION T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET
   43       | T_IF . EXPRESSION T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET T_ELSE T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET

    T_MINUS           shift, and go to state 61
    T_NOT             shift, and go to state 62
    T_IDENTIFIER      shift, and go to state 63
    T_INTEGERLITERAL  shift, and go to state 64
    T_NEW             shift, and go to state 65
    T_TRUE            shift, and go to state 66
    T_FALSE           shift, and go to state 67
    T_OPENPAREN       shift, and go to state 68

    EXPRESSION  go to state 71
    METHODCALL  go to state 70


state 45

   44 WHILELOOP: T_WHILE . EXPRESSION T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET

    T_MINUS           shift, and go to state 61
    T_NOT             shift, and go to state 62
    T_IDENTIFIER      shift, and go to state 63
    T_INTEGERLITERAL  shift, and go to state 64
    T_NEW             shift, and go to state 65
    T_TRUE            shift, and go to state 66
    T_FALSE           shift, and go to state 67
    T_OPENPAREN       shift, and go to state 68

    EXPRESSION  go to state 72
    METHODCALL  go to state 70


state 46

   45 REPEATUNTIL: T_REPEAT . T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET T_UNTIL T_OPENPAREN EXPRESSION T_CLOSEDPAREN T_SEMI

    T_OPENBRACKET  shift, and go to state 73


state 47

   24 BODY: TYPE . VARIABLE_ T_SEMI BODY

    T_IDENTIFIER  shift, and go to state 74

    VARIABLE_  go to state 75


state 48

   16 METHOD: T_IDENTIFIER T_OPENPAREN PARAMETERS1 T_CLOSEDPAREN T_METHODRETURN RETURN_TYPE T_OPENBRACKET BODY . RETURN_STATEMENT T_CLOSEDBRACKET

    T_RETURN  shift, and go to state 76

    $default  reduce using rule 29 (RETURN_STATEMENT)

    RETURN_STATEMENT  go to state 77


state 49

   25 BODY: STATEMENTS1 .

    $default  reduce using rule 25 (BODY)


state 50

   30 STATEMENTS1: STATEMENTS .

    $default  reduce using rule 30 (STATEMENTS1)


state 51

   32 STATEMENTS: STATEMENT . STATEMENTS
   33           | STATEMENT .

    T_IDENTIFIER  shift, and go to state 78
    T_PRINT       shift, and go to state 43
    T_IF          shift, and go to state 44
    T_WHILE       shift, and go to state 45
    T_REPEAT      shift, and go to state 46

    $default  reduce using rule 33 (STATEMENTS)

    STATEMENTS   go to state 79
    STATEMENT    go to state 51
    ASSIGNMENT   go to state 52
    IFELSE       go to state 53
    WHILELOOP    go to state 54
    REPEATUNTIL  go to state 55
    PRINT1       go to state 56
    METHODCALL   go to state 57


state 52

   34 STATEMENT: ASSIGNMENT .

    $default  reduce using rule 34 (STATEMENT)


state 53

   36 STATEMENT: IFELSE .

    $default  reduce using rule 36 (STATEMENT)


state 54

   37 STATEMENT: WHILELOOP .

    $default  reduce using rule 37 (STATEMENT)


state 55

   38 STATEMENT: REPEATUNTIL .

    $default  reduce using rule 38 (STATEMENT)


state 56

   39 STATEMENT: PRINT1 .

    $default  reduce using rule 39 (STATEMENT)


state 57

   35 STATEMENT: METHODCALL . T_SEMI

    T_SEMI  shift, and go to state 80


state 58

   40 ASSIGNMENT: T_IDENTIFIER T_EQUALS . EXPRESSION T_SEMI

    T_MINUS           shift, and go to state 61
    T_NOT             shift, and go to state 62
    T_IDENTIFIER      shift, and go to state 63
    T_INTEGERLITERAL  shift, and go to state 64
    T_NEW             shift, and go to state 65
    T_TRUE            shift, and go to state 66
    T_FALSE           shift, and go to state 67
    T_OPENPAREN       shift, and go to state 68

    EXPRESSION  go to state 81
    METHODCALL  go to state 70


state 59

   67 METHODCALL: T_IDENTIFIER T_OPENPAREN . ARGUMENTS T_CLOSEDPAREN

    T_MINUS           shift, and go to state 61
    T_NOT             shift, and go to state 62
    T_IDENTIFIER      shift, and go to state 63
    T_INTEGERLITERAL  shift, and go to state 64
    T_NEW             shift, and go to state 65
    T_TRUE            shift, and go to state 66
    T_FALSE           shift, and go to state 67
    T_OPENPAREN       shift, and go to state 68

    $default  reduce using rule 70 (ARGUMENTS)

    EXPRESSION  go to state 82
    METHODCALL  go to state 70
    ARGUMENTS   go to state 83
    ARGUMENTS_  go to state 84


state 60

   41 ASSIGNMENT: T_IDENTIFIER T_DOT . T_IDENTIFIER T_EQUALS EXPRESSION T_SEMI
   68 METHODCALL: T_IDENTIFIER T_DOT . T_IDENTIFIER T_OPENPAREN ARGUMENTS T_CLOSEDPAREN

    T_IDENTIFIER  shift, and go to state 85


state 61

   57 EXPRESSION: T_MINUS . EXPRESSION

    T_MINUS           shift, and go to state 61
    T_NOT             shift, and go to state 62
    T_IDENTIFIER      shift, and go to state 63
    T_INTEGERLITERAL  shift, and go to state 64
    T_NEW             shift, and go to state 65
    T_TRUE            shift, and go to state 66
    T_FALSE           shift, and go to state 67
    T_OPENPAREN       shift, and go to state 68

    EXPRESSION  go to state 86
    METHODCALL  go to state 70


state 62

   56 EXPRESSION: T_NOT . EXPRESSION

    T_MINUS           shift, and go to state 61
    T_NOT             shift, and go to state 62
    T_IDENTIFIER      shift, and go to state 63
    T_INTEGERLITERAL  shift, and go to state 64
    T_NEW             shift, and go to state 65
    T_TRUE            shift, and go to state 66
    T_FALSE           shift, and go to state 67
    T_OPENPAREN       shift, and go to state 68

    EXPRESSION  go to state 87
    METHODCALL  go to state 70


state 63

   58 EXPRESSION: T_IDENTIFIER .
   59           | T_IDENTIFIER . T_DOT T_IDENTIFIER
   67 METHODCALL: T_IDENTIFIER . T_OPENPAREN ARGUMENTS T_CLOSEDPAREN
   68           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN ARGUMENTS T_CLOSEDPAREN

    T_OPENPAREN  shift, and go to state 59
    T_DOT        shift, and go to state 88

    $default  reduce using rule 58 (EXPRESSION)


state 64

   62 EXPRESSION: T_INTEGERLITERAL .

    $default  reduce using rule 62 (EXPRESSION)


state 65

   65 EXPRESSION: T_NEW . T_IDENTIFIER
   66           | T_NEW . T_IDENTIFIER T_OPENPAREN ARGUMENTS T_CLOSEDPAREN

    T_IDENTIFIER  shift, and go to state 89


state 66

   63 EXPRESSION: T_TRUE .

    $default  reduce using rule 63 (EXPRESSION)


state 67

   64 EXPRESSION: T_FALSE .

    $default  reduce using rule 64 (EXPRESSION)


state 68

   61 EXPRESSION: T_OPENPAREN . EXPRESSION T_CLOSEDPAREN

    T_MINUS           shift, and go to state 61
    T_NOT             shift, and go to state 62
    T_IDENTIFIER      shift, and go to state 63
    T_INTEGERLITERAL  shift, and go to state 64
    T_NEW             shift, and go to state 65
    T_TRUE            shift, and go to state 66
    T_FALSE           shift, and go to state 67
    T_OPENPAREN       shift, and go to state 68

    EXPRESSION  go to state 90
    METHODCALL  go to state 70


state 69

   46 PRINT1: T_PRINT EXPRESSION . T_SEMI
   47 EXPRESSION: EXPRESSION . T_PLUS EXPRESSION
   48           | EXPRESSION . T_MINUS EXPRESSION
   49           | EXPRESSION . T_MULTIPLY EXPRESSION
   50           | EXPRESSION . T_DIVIDE EXPRESSION
   51           | EXPRESSION . T_LESSTHAN EXPRESSION
   52           | EXPRESSION . T_LESSTHANOREQUAL EXPRESSION
   53           | EXPRESSION . T_EQUALSBOOL EXPRESSION
   54           | EXPRESSION . T_AND EXPRESSION
   55           | EXPRESSION . T_OR EXPRESSION

    T_OR               shift, and go to state 91
    T_AND              shift, and go to state 92
    T_LESSTHAN         shift, and go to state 93
    T_LESSTHANOREQUAL  shift, and go to state 94
    T_PLUS             shift, and go to state 95
    T_MINUS            shift, and go to state 96
    T_MULTIPLY         shift, and go to state 97
    T_DIVIDE           shift, and go to state 98
    T_SEMI             shift, and go to state 99
    T_EQUALSBOOL       shift, and go to state 100


state 70

   60 EXPRESSION: METHODCALL .

    $default  reduce using rule 60 (EXPRESSION)


state 71

   42 IFELSE: T_IF EXPRESSION . T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET
   43       | T_IF EXPRESSION . T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET T_ELSE T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET
   47 EXPRESSION: EXPRESSION . T_PLUS EXPRESSION
   48           | EXPRESSION . T_MINUS EXPRESSION
   49           | EXPRESSION . T_MULTIPLY EXPRESSION
   50           | EXPRESSION . T_DIVIDE EXPRESSION
   51           | EXPRESSION . T_LESSTHAN EXPRESSION
   52           | EXPRESSION . T_LESSTHANOREQUAL EXPRESSION
   53           | EXPRESSION . T_EQUALSBOOL EXPRESSION
   54           | EXPRESSION . T_AND EXPRESSION
   55           | EXPRESSION . T_OR EXPRESSION

    T_OR               shift, and go to state 91
    T_AND              shift, and go to state 92
    T_LESSTHAN         shift, and go to state 93
    T_LESSTHANOREQUAL  shift, and go to state 94
    T_PLUS             shift, and go to state 95
    T_MINUS            shift, and go to state 96
    T_MULTIPLY         shift, and go to state 97
    T_DIVIDE           shift, and go to state 98
    T_OPENBRACKET      shift, and go to state 101
    T_EQUALSBOOL       shift, and go to state 100


state 72

   44 WHILELOOP: T_WHILE EXPRESSION . T_OPENBRACKET STATEMENTS T_CLOSEDBRACKET
   47 EXPRESSION: EXPRESSION . T_PLUS EXPRESSION
   48           | EXPRESSION . T_MINUS EXPRESSION
   49           | EXPRESSION . T_MULTIPLY EXPRESSION
   50           | EXPRESSION . T_DIVIDE EXPRESSION
   51           | EXPRESSION . T_LESSTHAN EXPRESSION
   52           | EXPRESSION . T_LESSTHANOREQUAL EXPRESSION
   53           | EXPRESSION . T_EQUALSBOOL EXPRESSION
   54           | EXPRESSION . T_AND EXPRESSION
   55           | EXPRESSION . T_OR EXPRESSION

    T_OR               shift, and go to state 91
    T_AND              shift, and go to state 92
    T_LESSTHAN         shift, and go to state 93
    T_LESSTHANOREQUAL  shift, and go to state 94
    T_PLUS             shift, and go to state 95
    T_MINUS            shift, and go to state 96
    T_MULTIPLY         shift, and go to state 97
    T_DIVIDE           shift, and go to state 98
    T_OPENBRACKET      shift, and go to state 102
    T_EQUALSBOOL       shift, and go to state 100


state 73

   45 REPEATUNTIL: T_REPEAT T_OPENBRACKET . STATEMENTS T_CLOSEDBRACKET T_UNTIL T_OPENPAREN EXPRESSION T_CLOSEDPAREN T_SEMI

    T_IDENTIFIER  shift, and go to state 78
    T_PRINT       shift, and go to state 43
    T_IF          shift, and go to state 44
    T_WHILE       shift, and go to state 45
    T_REPEAT      shift, and go to state 46

    STATEMENTS   go to state 103
    STATEMENT    go to state 51
    ASSIGNMENT   go to state 52
    IFELSE       go to state 53
    WHILELOOP    go to state 54
    REPEATUNTIL  go to state 55
    PRINT1       go to state 56
    METHODCALL   go to state 57


state 74

   27 VARIABLE_: T_IDENTIFIER .

    $default  reduce using rule 27 (VARIABLE_)


state 75

   24 BODY: TYPE VARIABLE_ . T_SEMI BODY
   26 VARIABLE_: VARIABLE_ . T_COMMA T_IDENTIFIER

    T_SEMI   shift, and go to state 104
    T_COMMA  shift, and go to state 105


state 76

   28 RETURN_STATEMENT: T_RETURN . EXPRESSION T_SEMI

    T_MINUS           shift, and go to state 61
    T_NOT             shift, and go to state 62
    T_IDENTIFIER      shift, and go to state 63
    T_INTEGERLITERAL  shift, and go to state 64
    T_NEW             shift, and go to state 65
    T_TRUE            shift, and go to state 66
    T_FALSE           shift, and go to state 67
    T_OPENPAREN       shift, and go to state 68

    EXPRESSION  go to state 106
    METHODCALL  go to state 70


state 77

   16 METHOD: T_IDENTIFIER T_OPENPAREN PARAMETERS1 T_CLOSEDPAREN T_METHODRETURN RETURN_TYPE T_OPENBRACKET BODY RETURN_STATEMENT . T_CLOSEDBRACKET

    T_CLOSEDBRACKET  shift, and go to state 107


state 78

   40 ASSIGNMENT: T_IDENTIFIER . T_EQUALS EXPRESSION T_SEMI
   41           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_EQUALS EXPRESSION T_SEMI
   67 METHODCALL: T_IDENTIFIER . T_OPENPAREN ARGUMENTS T_CLOSEDPAREN
   68           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN ARGUMENTS T_CLOSEDPAREN

    T_EQUALS     shift, and go to state 58
    T_OPENPAREN  shift, and go to state 59
    T_DOT        shift, and go to state 60


state 79

   32 STATEMENTS: STATEMENT STATEMENTS .

    $default  reduce using rule 32 (STATEMENTS)


state 80

   35 STATEMENT: METHODCALL T_SEMI .

    $default  reduce using rule 35 (STATEMENT)


state 81

   40 ASSIGNMENT: T_IDENTIFIER T_EQUALS EXPRESSION . T_SEMI
   47 EXPRESSION: EXPRESSION . T_PLUS EXPRESSION
   48           | EXPRESSION . T_MINUS EXPRESSION
   49           | EXPRESSION . T_MULTIPLY EXPRESSION
   50           | EXPRESSION . T_DIVIDE EXPRESSION
   51           | EXPRESSION . T_LESSTHAN EXPRESSION
   52           | EXPRESSION . T_LESSTHANOREQUAL EXPRESSION
   53           | EXPRESSION . T_EQUALSBOOL EXPRESSION
   54           | EXPRESSION . T_AND EXPRESSION
   55           | EXPRESSION . T_OR EXPRESSION

    T_OR               shift, and go to state 91
    T_AND              shift, and go to state 92
    T_LESSTHAN         shift, and go to state 93
    T_LESSTHANOREQUAL  shift, and go to state 94
    T_PLUS             shift, and go to state 95
    T_MINUS            shift, and go to state 96
    T_MULTIPLY         shift, and go to state 97
    T_DIVIDE           shift, and go to state 98
    T_SEMI             shift, and go to state 108
    T_EQUALSBOOL       shift, and go to state 100


state 82

   47 EXPRESSION: EXPRESSION . T_PLUS EXPRESSION
   48           | EXPRESSION . T_MINUS EXPRESSION
   49           | EXPRESSION . T_MULTIPLY EXPRESSION
   50           | EXPRESSION . T_DIVIDE EXPRESSION
   51           | EXPRESSION . T_LESSTHAN EXPRESSION
   52           | EXPRESSION . T_LESSTHANOREQUAL EXPRESSION
   53           | EXPRESSION . T_EQUALSBOOL EXPRESSION
   54           | EXPRESSION . T_AND EXPRESSION
   55           | EXPRESSION . T_OR EXPRESSION
   72 ARGUMENTS_: EXPRESSION .
